my-portfolio/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&display=swap');
@font-face {
  font-family: Chromium;
  src: url(../Fonts/Chromium/chromiumoned.ttf);
}
@layer utilities {
  .backdrop-blur-sm {
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
  }
}
@font-face {
  font-family: CooperHewitt;
  src: url(../Fonts/cooper-hewitt/CooperHewitt-Medium.otf);
}
html,
body {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
}
body {
  background-color: #21252b;
  -webkit-overflow-scrolling: touch;
}

h1 {
  font-weight: 400;
  font-size: 3rem;
  opacity: 0.9;
  text-align: center;
  letter-spacing: 0.2em;
  text-transform: uppercase;

  color: #fff;
}
.text-projects {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #fff;
}
#greet {
  @apply text-3xl;
  font-size: 6rem !important;
}
.snap-x {
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  -webkit-overflow-scrolling: touch;
}

.snap-start {
  scroll-snap-align: start;
}

.tapered2 {
  background-image: linear-gradient(
    181deg,
    #9bb9dd 0%,
    #9bb9dd 50%,
    transparent 54%,
    transparent 100%
  );
}

h2 {
  span {
    background-size: 100% 15%;
    background-repeat: repeat-x;
    background-position: left 0% bottom 8%;
  }
}
h3 {
  font-family: CooperHewitt;
  font-size: 8rem;
  color: #9bb9dd;
  text-align: center;
  letter-spacing: 0.2em;
  text-transform: uppercase;
}
#arrow-down {
  animation: bounce 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
  cursor: pointer;
}

@keyframes bounce {
  50% {
    transform: translateY(-15px);
  }
}
#landing-arrow {
  color: #22b573;
  animation: bounce 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
}
.arrows {
  width: 80px;
  height: 80px;
  position: absolute;
  left: 50%;
  margin-left: -20px;
  bottom: 20px;
}

.arrows path {
  stroke: #ffffff;
  fill: transparent;
  stroke-width: 3px;
  animation: arrow 2s infinite;
  -webkit-animation: arrow 2s infinite;
}

@keyframes arrow {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  80% {
    opacity: 1;
    transform: translateY(50px);
    color: #22b573;
  }
  100% {
    opacity: 0;
    transform: translateY(50px);
  }
}

@-webkit-keyframes arrow {
  0% {
    opacity: 0;
    transform: translateY(10px);
  }
  80% {
    opacity: 1;
    transform: translateY(50px);
    color: #22b573;
  }
  100% {
    opacity: 0;
    transform: translateY(50px);
  }
}

.slider__navi {
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  z-index: 999;
}

.slider__navi a {
  display: block;
  height: 6px;
  width: 20px;
  margin: 20px 0;
  text-indent: -9999px;
  box-shadow: none;
  border: none;
  background: rgba(0, 0, 0, 0.2);
}

.slider__navi a.active {
  background: rgba(255, 255, 255, 1);
}
.ex2 {
  text-decoration-line: underline;
  text-decoration-color: yellow;
  text-decoration-style: wavy;
}
.ex3 {
  text-decoration-line: underline;
  text-decoration-color: palevioletred;
  text-decoration-style: wavy;
}
.ex4 {
  text-decoration-line: underline;
  text-decoration-color: #c1ff72;
  text-decoration-style: wavy;
}
.ex5 {
  text-decoration-line: underline;
  text-decoration-color: #7798bc;
  text-decoration-style: wavy;
}

.flex__container {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  -webkit-flex-flow: row wrap;
  -moz-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  -o-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-justify-content: flex-start;
  -moz-justify-content: flex-start;
  -ms-justify-content: flex-start;
  -o-justify-content: flex-start;
  justify-content: flex-start;
  height: 100vh;
  width: 100%;
  z-index: 1;
}

.flex__container.flex--active {
  z-index: 2;
}

.text--sub {
  font-size: 12px;
  letter-spacing: 0.5rem;
  text-transform: uppercase;
  margin-bottom: 40px;
}

.text--big {
  font-family: 'Poppins', sans-serif;
  font-size: 4em;
  font-weight: 700;
  line-height: 110px;
}
.text--small {
  font-family: 'Poppins', sans-serif;
  font-size: 2em !important ;
  font-weight: 700;

  color: rgba(255, 255, 255, 0.8);
}
.text--middle {
  font-family: 'Poppins', sans-serif;
  font-size: 2em;
  font-weight: 700;

  color: rgba(255, 255, 255, 0.8);
}

.text--normal {
  font-size: 1.1;
  color: rgba(255, 255, 255, 0.8);
  line-height: 22px;
  margin-top: 0;
  margin-bottom: 1.1rem;
}
.text-4xl {
  color: rgba(255, 255, 255, 0.2);
}
#tailwind-icon {
  font-size: 7rem;
}
.text__background {
  font-family: 'Poppins', sans-serif;

  color: rgba(255, 255, 255, 0.2);
  font-size: 50px;
  font-weight: 700;
}

.flex__item {
  height: 100vh;
  color: #fff;
  transition: transform 0.1s linear;
}

.flex__item--left {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  align-items: center;
  -webkit-align-items: center;
  -moz-align-items: center;
  -ms-align-items: center;
  width: 65%;
  transform-origin: left bottom;
  transition: transform 0.1s linear 0.4s;
  opacity: 0;
  position: relative;
  overflow: hidden;
}

.flex__item--right {
  width: 35%;
  transform-origin: right center;
  transition: transform 0.1s linear 0s;
  opacity: 0;
}

.flex--preStart .flex__item--left,
.flex--preStart .flex__item--right,
.flex--active .flex__item--left,
.flex--active .flex__item--right {
  opacity: 1;
}

.flex--piplup .flex__item--left {
  background: #21252b;
}

.flex--piplup .flex__item--right {
  background-image: url('../public/champ-bg.png');
  background-color: rgb(236, 230, 255, 0.8);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.flex--pikachu .flex__item--left {
  background: #21252b;
}

.flex--pikachu .flex__item--right {
  background-image: url('../public/attract-bg2.png');
  background-color: #f4ecc5;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

/* Blaziken */

.flex--blaziken .flex__item--left {
  background: #21252b;
}

.flex--blaziken .flex__item--right {
  background-image: url('../public/hackafun.png');
  background-color: #7798bc;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.flex__content {
  margin-left: 80px;
  width: 55%;
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: transform 0.2s linear 0.2s, opacity 0.1s linear 0.2s;
}

.flex__container.animate--start .flex__content {
  transform: translate3d(0, -200%, 0);
  opacity: 0;
}

.flex__container.animate--start .pokemon__img {
  transform: translate3d(-200px, 0, 0);
  opacity: 0;
}

/* Animate-END point */

.flex__container.animate--end .flex__item--left {
  transform: scaleY(0);
}

.flex__container.animate--end .flex__item--right {
  transform: scaleX(0);
}

.flex__container.animate--end .flex__content {
  transform: translate3d(0, 200%, 0);
  opacity: 0;
}

/* .flex__container.animate--end .pokemon__img {
	transform: translate3d(200px,0,0);
	opacity: 0;
} */

.btn {
  display: inline-block;
  outline: none;
  cursor: pointer;
  font-size: 14px;
  line-height: 1;
  border-radius: 500px;
  transition-property: background-color, border-color, color, box-shadow, filter;
  transition-duration: 0.3s;
  border: 1px solid transparent;
  letter-spacing: 2px;
  min-width: 160px;
  text-transform: uppercase;
  white-space: normal;
  font-weight: 700;
  text-align: center;
  padding: 16px 14px 18px;
  color: #616467;
  box-shadow: inset 0 0 0 2px #616467;
  background-color: transparent;
  height: 48px;
}
.btn:hover {
  color: #fff;
  border: 1px solid #e5ccfd;
}
span {
  text-decoration-skip-ink: none;
  height: 1.5em;
}
#arrow-container {
  position: absolute;
  bottom: 1%;
  left: 85%;
  transform: translate(-50%, -50%);
}
.icons {
  color: rgba(255, 255, 255, 0.2);
}
input:checked ~ .dot {
  transform: translateX(100%);
  background-color: #c1ff72;
}

.toggle-checkbox:checked {
  @apply: right-0 border-green-400;
  right: 0;
  border-color: #68d391;
}
.toggle-checkbox:checked + .toggle-label {
  @apply: bg-green-400;
  background-color: #c1ff72;
}
#spotify-modal {
  @apply: bg-gray-600;
}
#modal-btn {
  color: white !important;
  font-family: 'Poppins', sans-serif;
  text-transform: none;
}

/* media queries */
@media screen and (min-width: 1500px) {
  #text-2-scrolled {
    margin-left: 5%;
  }
  #text-1-scrolled {
    margin-left: 5%;
  }
}

@media screen and (max-width: 1500px) and (min-width: 1000px) {
  #text-2-scrolled {
    margin-left: 17%;
  }
  #text-1-scrolled {
    margin-left: 10%;
  }
}
@media screen and (max-width: 1000px) and (min-width: 550px) {
  #text-1-scrolled {
    margin-left: 13%;
  }
  #text-2-scrolled {
    margin-left: 16%;
  }
}
@media screen and (max-width: 850px) and (min-width: 600px) {
  #text-2-scrolled {
    margin-top: 3%;
  }
  #text-1-scrolled {
    margin-left: 14%;
  }
}
@media screen and (max-width: 600px) {
  #text-2-scrolled {
    text-align: center;
    position: absolute;
    margin-left: 80%;
    margin-top: 20%;
    margin-top: 45%;
    width: 100%;
  }
  #text-1-scrolled {
    text-align: center;
    position: absolute;
    margin-left: 60%;
    margin-bottom: 25%;
    margin-top: 25%;
    width: 100%;
  }
  #weather-icon {
    border: 1px solid yellow;
    display: none;
  }
  .contact-text {
    font-size: 2.5em;
    margin-bottom: 0 !important;
  }
  .contact-container {
    text-align: center;
  }
  .contact-buttons {
    display: flex;
    justify-content: center;
  }
  .contact-p {
    margin-top: 0;
  }
  .container {
    margin-top: 0px;
  }
  .spotify-player {
    margin-top: 30%;
  }
  .playlist-text {
    font-size: 1.4em;
  }

  .modal-description {
    font-size: 0em;
  }
  .care-to {
    font-size: 1.2em;
    margin: 0;
  }
}
@media not all and (-webkit-min-device-pixel-ratio: 0) {
  /* Safari-specific styles */
  #mobile-home {
    overflow: scroll;
  }
}
@media not all and (-webkit-min-device-pixel-ratio: 0) {
  /* Safari-specific styles */
  #mobile-home {
    overflow: hidden;
  }
}

.intro-text {
  font-family: Chromium;
}
.modal-description {
  font-size: 0.8em;
}

